# libspotify

./: CMakeLists.txt  README.md  docker-compose.yml
.github/workflows/: cmake.yml
examples/: CMakeLists.txt
examples/authentication/: CMakeLists.txt  auth.cc
examples/music_searcher/: CMakeLists.txt  music_searcher.cc
examples/searcher/: CMakeLists.txt  searcher.cc
include/: .tags  access_listener.h  add_music_playlist_listener.h  api.h  create_playlist_listener.h  list_playlist_musics_listener.h  playlist_listener.h  search_listener.h  search_music_listener.h  spotify.h  types.h
include/private/: api_private.h  authenticator.h  curl_wrapper.h  db_handler.h  music_searcher.h  playlist_mgr.h  searcher.h  spotify_auth.h  spotify_private.h  utils.h
lib/: CMakeLists.txt
lib/src/: api.cc  authenticator.cc  curl_wrapper.cc  playlist_mgr.cc  searcher.cc  spotify.cc  spotify_private.cc  utils.cc
scripts/: init_db.js
scripts/cmake/: fetch_dependencies.cmake
src/: CMakeLists.txt  api.cc  api_private.cc  curl_wrapper.cc  db_handler.cc  music_searcher.cc  playlist_mgr.cc  spotify_auth.cc  utils.cc
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  api_test.cc  main.cc  music_searcher_test.cc  playlist_mgr_test.cc  spotify_auth_test.cc
tests/unit/jsons/: search_result_multiple_with_spaces.json
tests/unit/mock/: access_listener_mock.h  add_music_playlist_listener_mock.h  create_playlist_listener_mock.h  curl_wrapper_mock.h  db_handler_mock.h  list_playlist_musics_listener_mock.h  playlist_listener_mock.h  playlist_mgr_mock.h  search_listener_mock.h  search_music_listener_mock.h  spotify_auth_mock.h
tests/unit/mock/jsons/: search_result_multiple.json  search_result_multiple_with_spaces.json  search_result_single_without_spaces.json  search_result_with_no_musics.json
tests/unit/src/: auth_test.cc  music_searcher_test.cc  playlist_mgr_test.cc  searcher_test.cc  spotify_auth_test.cc
